# nexusdr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SampleTypes.h  SignalEmitter.h  StandardFace.qss  arm-none-eabi-toolchain.cmake  cutesdr-vk6hl-no-gpio.json  cutesdr-vk6hl.json  cutesdr-vk6hl.qss  gpiod_encoders.md  gpiod_one_encoder.md  install-gpio.sh  main.cpp  mainwindow-1024x600.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  nexusdr.json  resources.qrc
cmake/modules/: FindQwt.cmake  FindUSB.cmake
config/: AudioConfig.h  AudioIqSourceConfig.h  AudioSignalIqSourceConfig.h  BandSelectorConfig.h  BandSelectorLookupItemConfig.h  ConfigBase.h  ConfigException.h  ConfigFactory.cpp  ConfigFactory.h  ControlConfig.h  DigitalInputConfig.h  DigitalInputGroupConfig.h  DigitalInputsConfig.h  DigitalOutputConfig.h  FunCubeConfig.h  GpioLineConfig.h  GpioLinesConfig.h  IqIoConfig.h  RadioConfig.h  RadioControlConfig.h  RadioUiConfig.h  ReceiverConfig.h  RotaryEncoderConfig.h  TransmitterConfig.h  UiConfig.h  VariantConfig.h
config-settings/config/: ConfigFactory.cpp  RadioConfig.h
config-settings/settings/: Agc.h  AgcSpeed.h  IfSettings.h  IqCorrectionSettings.h  MicSettings.h  RadioSettings.cpp  RadioSettings.h  RadioSettingsEvent.cpp  RadioSettingsEvent.h  RadioSettingsSource.h  RfSettings.h  TestSettings.h  TransmitterSettings.h  TwoToneSettings.h
config-settings/settings/bands/: BandSelector.h  BandSettings.cpp  BandSettings.h
config-settings/settings/base/: SettingUpdateHelpers.cpp  SettingUpdateHelpers.h  SettingUpdateSink.h  SettingUpdateSource.h  SettingValue.h  SettingsBase.h
config-settings/settings/pipeline/: PipelineSettings.h  RxPipelineSettings.h
control/: ControlBase.cpp  ControlBase.h  ControlSink.h  ControlSource.h  ControlSourceFactory.h  RadioControl.h
control/device/FunCubeDongle/: FunCubeDongle.h
control/device/gpio/: Gpio.cpp  Gpio.h  GpioException.cpp  GpioLines.cpp  GpioLines.h
dsp/blocks/: Oscillator.cpp  Oscillator.h
dsp/iq/: AudioIqSource.h  AudioSignalIqSource.h  IqSource.h  IqSourceFactory.cpp  IqSourceFactory.h  PingPongBufferSink.h
dsp/pipeline/: DcShift.h  IqPipeline.cpp  IqPipeline.h  IqPipelineStage.h  IqRxPipeline.cpp  IqRxPipeline.h  IqTxPipeline.cpp  IqTxPipeline.h  RxPipelineAudioTap.cpp  RxPipelineAudioTap.h
dsp/pipeline/SMeter/: SMeterStage.h
dsp/pipeline/agc/: IqAgcStage.h
dsp/pipeline/correction/: DcShift.h  IqCorrection.h
dsp/pipeline/decimator/: Decimator.h
dsp/pipeline/demodulators/: AmDemodulator.cpp  AmDemodulator.h  CwDemodulator.cpp  CwDemodulator.h  (+5 more)
dsp/stages/: IqStage.h
dsp/utils/: FilterCoefficients.h  HilbertTransform.h  PingPongBuffers.h  VectorAssembler.h  constants.h  window.h
include/: CrossPlatformTypes.h  ResultCode.h
include/config/: ControlBaseConfig.h  ControlSourceConfig.h  JsonConfig.h  RadioConfig.h  RadioControlConfig.h  ReceiverConfig.h
io/audio/: AudioException.h  AudioInput.h  AudioIo.h  AudioOutput.h  AudioSink.h  IqAudioDevice.h  IqAudioInput.h  IqIoException.cpp  IqIoException.h  IqSampleCursor.h  IqSink.h
io/control/: ControlBase.h  ControlException.cpp  ControlException.h  ControlSink.h  ControlSinkFactory.cpp  ControlSinkFactory.h  ControlSource.h  ControlSourceFactory.cpp  ControlSourceFactory.h  PttSink.h  PttSource.h  RadioControl.cpp  RadioControl.h
io/controller/: Controller.cpp  Controller.h  ControllerException.cpp  ControllerException.h  SinkController.cpp  SinkController.h  SinkControllerFactory.cpp  SinkControllerFactory.h  SourceController.cpp  SourceController.h  SourceControllerFactory.cpp  SourceControllerFactory.h
io/gpio/: Gpio.h  GpioLines.cpp  GpioLines.h
io/iq/: IqIo.cpp  IqIo.h
radio/: IqPipelineStage.h  Radio.cpp  Radio.h
radio/config/: AudioConfig.h  ControlConfig.h  RadioConfig.h  RadioControlConfig.h  ReceiverConfig.h  TransmitterConfig.h
radio/iq/: IqReceiver.cpp  IqReceiver.h
radio/pipeline/: IqPipeline.cpp  IqPipeline.h  IqPipelineStage.h  IqRxPipeline.cpp  IqRxPipeline.h  IqTxPipeline.cpp  IqTxPipeline.h
radio/receiver/: IqReceiver.cpp  IqReceiver.h  IqRxPipeline.h  ReceiverAudioEvent.cpp  ReceiverAudioEvent.h  ReceiverIqEvent.cpp  ReceiverIqEvent.h  ReceiverMeterEvent.cpp  ReceiverMeterEvent.h
radio/settings/: IfSettings.h  RadioSettings.h  ReceiverSettings.h  RfSettings.h  SettingsBase.h  SettingsException.cpp  SettingsException.h  TransmitterSettings.h
radio/transmitter/: IqTransmitter.cpp  IqTransmitter.h  IqTxPipeline.cpp  IqTxPipeline.h  TransmitterAudioEvent.cpp  TransmitterAudioEvent.h  TransmitterIqEvent.cpp  TransmitterIqEvent.h
scripts/: ViewIcons.py  install-qt.sh
settings/: Band.h  BandCategory.h  BandSelector.h  BandSettings.h  BandSettingsSelector.h  Bands.cpp  Bands.h  IfSettings.h  IqCorrectionSettings.h  MicSettings.h  Mode.h  ModeSettings.cpp  ModeSettings.h  PipelineSettings.h  PttSource.h  RadioAndBandSettingsSink.h  RadioSettings.cpp  RadioSettings.h  RadioSettingsEvent.h  RadioSettingsEventPublisher.h  RadioSettingsSink.h  RadioSettingsSource.h  ReceiverSettings.h  RfSettings.h  RxPipelineSettings.h  Setting.h  SettingDelta.h  SettingPath.h  SettingUpdate.h  SettingUpdateEvent.h  SettingUpdatePath.h  SettingUpdateSink.h  SettingUpdateSource.h  SettingValue.h  SettingsBase.h  SettingsException.h  SingleSetting.h  SingleSettingEvent.cpp  SingleSettingEvent.h  SingleSettingSink.h  (+5 more)
settings/bands/: BandSelector.h  BandSettings.cpp  BandSettings.h  SplitBandId.h
settings/base/: SettingUpdate.h  SettingValue.h
settings/control/: ControlSink.cpp  ControlSinkFactory.cpp  ControlSource.cpp  ControlSourceFactory.cpp  RadioControl.cpp
settings/core/: SettingUpdate.h  SettingUpdateEvent.cpp  SettingUpdateEvent.h  SettingValue.h
settings/pipeline/: PipelineSettings.h  RxPipelineSettings.h
src/core/: SampleTypes.h
src/util/: StringUtils.cpp
ui/qt/: BandDialog.cpp  BandDialog.h  BandDialog.ui  ChartTheme.h  QtBandDialog.cpp  QtBandDialog.h  QtBandDialog.ui  QtChartBase.h  QtChartTheme.h  QtPanadapter.cpp  QtTimeSeriesChart.cpp
util/: StringUtils.cpp  StringUtils.h
(+640 files in other folders)
